Fixed #400
Small issue- sometimes it takes time to show the whole scrollbar on top.
Part of scrollbar seen that time.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -600,6 +600,9 @@ ul .dropdown-menu li{
 .mCS-minimal-dark .mCSB_container{
 	overflow: visible;
 }
+#mCSB_1_dragger_vertical{
+     z-index: 4;
+}
 .fancytree-title {
     font-size: 13px   
 }
